# atomic_physics

./: .flake8  .gitignore  CITATION.cff  README.md  pyproject.toml  run_pytype.py  setup.py
.github/workflows/: docs.yml  package.yml  test.yml
atomic_physics/: __init__.py  beam.py  bloch.py  common.py  core.py  julia_tools.py  juliapkg.json  operators.py  polarization.py  rabi.py  rate_equations.py  utils.py  wigner.py
atomic_physics/atoms/: two_state.py
atomic_physics/bloch/: Manifest.toml  Project.toml
atomic_physics/bloch/src/: bloch.jl
atomic_physics/examples/: M1_transitions.py  breit_rabi.py  ca_shelving.py  clock_qubits.py
atomic_physics/ions/: __init__.py  ba133.py  ba135.py  ba137.py  ba138.py  ca40.py  ca43.py  mg25.py  sr88.py
atomic_physics/tests/: test_atom.py  test_atom_factory.py  test_atoms.py  test_bloch.py  test_ca43.py  test_ca43_consts.py  test_examples.py  test_f_number.py  test_hfs_sign.py  test_level.py  test_level_data.py  test_mg25.py  test_mg25_consts.py  test_operators.py  test_polarization.py  test_rates.py  test_spin_half.py  test_spont.py  test_stim.py  test_two_state_atom.py  test_utils.py  test_wigner.py  utils.py
docs/: Makefile  api.rst  changes.rst  conf.py  contributing.rst  definitions_and_conventions.rst  getting_started.rst  index.rst  make.bat  testing.rst
ion_phys/: __init__.py  common.py  ground_level.py  operators.py  rate_equations.py  utils.py  wigner.py
ion_phys/atoms/: ca_43_p.py
ion_phys/examples/: M1_transitions.py  breit_rabi.py  ca_43_basic.py  ca_shelving.py  clock_qubits.py  tls_dynamics.py
ion_phys/ions/: ca40.py  ca43.py  ca_43_p.py  sr88.py
ion_phys/tests/: test_level_sort.py  test_rates.py  test_spont.py  test_stim.py  test_tls.py  test_tss.py  test_wigner.py
physics_manual/: bibliography.bib  main.tex
